# TiinySwatch

./: .gitignore  README.md  TiinySwatch.spec  app.py  installer.iss  main.py  main.spec  out.txt  pantone-lab-colors.json  pyproject.toml  requirements.txt  setup.py  styles.py  test.py
color/: __init__.py  color_arc.py  color_conversion.py  color_enhanced.py  color_poly.py  color_tetra.py
color/conversions/: __init__.py  cmyk_conversions.py  colormath_wrapper.py  ictcp_conversions.py  itp_conversions.py  lab_conversions.py
color/geometry/: __init__.py  color_arc.py  color_poly.py  color_tetra.py
dialogs/: __init__.py  transparent_overlay.py
docs/: index.html
menus/: __init__.py  settings_menu.py
scripts/: build_msi.bat  generate_pantone.py  inspect_pantone.py  launcher.py  optimize.py  test_pantone_load.py  update_colormath_wrappers.py
src/: app.py
src/tiinyswatch/: __init__.py  __main__.py  app.py  single_application.py
src/tiinyswatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tiinyswatch/color/: __init__.py  color_enhanced.py
src/tiinyswatch/ui/: __init__.py  icons.py
src/tiinyswatch/utils/: __init__.py  clipboard_manager.py  keybind_manager.py  (+7 more)
styles/: __init__.py  dark_style_sheet.py  qt_styles.py
utils/: __init__.py  clipboard_manager.py  color_utils.py  keybind_manager.py  notification_manager.py  pantone-lab-colors.json  pantone-xyz-colors.json  pantone_data.py  settings.py
widgets/: __init__.py  color_controls.py  color_picker.py  color_widgets.py  history_palette.py  q_double_slider.py
(+49 files in other folders)
