[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiinyswatch"
version = "1.0.1"
description = "A lightweight color picker and color management application"
readme = "README.md"
authors = [
    {name = "Connor Hayes", email = "connorheyz@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy<2",
    "PySide6==6.6.1",
    "pillow==10.1.0",
    "colormath",
]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/connorheyz/TiinySwatch"

[project.scripts]
tiinyswatch = "tiinyswatch.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tiinyswatch"]

[tool.setuptools.package-data]
tiinyswatch = ["utils/pantone-colors.json"]